forum [frames] tag - display in the same formatting as publications and submissions

--- a/TASVideos.ForumEngine/TASVideos.ForumEngine.csproj
+++ b/TASVideos.ForumEngine/TASVideos.ForumEngine.csproj
@@ -13,4 +13,7 @@
 	<ItemGroup>
 		<AdditionalFiles Include="$(ProjectDir)../.stylecop.json" />
 	</ItemGroup>
+	<ItemGroup>
+	  <ProjectReference Include="..\TASVideos.Common\TASVideos.Common.csproj" />
+	</ItemGroup>
 </Project>
