--- a/TASVideos.WikiEngine/TASVideos.WikiEngine.csproj
+++ b/TASVideos.WikiEngine/TASVideos.WikiEngine.csproj
@@ -14,4 +14,7 @@
 	<ItemGroup>
 		<AdditionalFiles Include="$(ProjectDir)../.stylecop.json" />
 	</ItemGroup>
+	<ItemGroup>
+	  <ProjectReference Include="..\TASVideos.Common\TASVideos.Common.csproj" />
+	</ItemGroup>
 </Project>
