set up postgres as a database option, including a bulk importer

--- a/TASVideos/appsettings.Demo.json
+++ b/TASVideos/appsettings.Demo.json
@@ -1,6 +1,7 @@
 {
 	"BaseUrl": "https://tasvideos.mistflux.net",
 	"StartupStrategy": "Minimal",
+	"UsePostgres": false,
 	"CacheSettings": {
 		"CacheType": "Memory",
 		"CacheDurationInSeconds": "7200"
