--- a/TASVideos/appsettings.json
+++ b/TASVideos/appsettings.json
@@ -2,7 +2,8 @@
 	"StartupStrategy":  "Minimal",
 	"EnableGzipCompression":  "True",
 	"SendGridKey":  "",
-	"SendGridFrom":  "noreply@tasvideos.org",
+	"SendGridFrom": "noreply@tasvideos.org",
+	"UsePostgres":  true, 
 	"CacheSettings": {
 		"CacheType": "Memory",
 		"CacheDurationInSeconds": "3600"
