use postgres on demo server

--- a/TASVideos/appsettings.Demo.json
+++ b/TASVideos/appsettings.Demo.json
@@ -1,7 +1,7 @@
 {
 	"BaseUrl": "https://tasvideos.mistflux.net",
 	"StartupStrategy": "Minimal",
-	"UsePostgres": false,
+	"UsePostgres": true,
 	"CacheSettings": {
 		"CacheType": "Memory",
 		"CacheDurationInSeconds": "7200"
