add postgres sample data generation option, change users passwords to default password instead of null to remove the need to generate sample users, prune more data in sample data generation

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,4 @@ TASVideos/Properties/serviceDependencies.json
 TASVideos/Properties/serviceDependencies.local.json
 TASVideos.sln.personal.DotSettings
 TASVideos.Data/SampleData/SampleData.sql
+TASVideos.Data/SampleData/SampleData-Postgres.sql
