--- a/TASVideos.Data/TASVideos.Data.csproj
+++ b/TASVideos.Data/TASVideos.Data.csproj
@@ -7,6 +7,7 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+		<EmbeddedResource Include="SampleData\SampleData-Postgres.zip" />
 		<EmbeddedResource Include="SampleData\SampleData.zip" />
 	</ItemGroup>
 
