rename mssql sample data files

--- a/TASVideos.Data/TASVideos.Data.csproj
+++ b/TASVideos.Data/TASVideos.Data.csproj
@@ -8,7 +8,7 @@
 
 	<ItemGroup>
 		<EmbeddedResource Include="SampleData\SampleData-Postgres.zip" />
-		<EmbeddedResource Include="SampleData\SampleData.zip" />
+		<EmbeddedResource Include="SampleData\SampleData-MsSql.zip" />
 	</ItemGroup>
 
 	<ItemGroup>
