redo migrations for postgres instead of mssql, add Migrate import strategy, and launch settings option

--- a/TASVideos/Properties/launchSettings.json
+++ b/TASVideos/Properties/launchSettings.json
@@ -79,6 +79,17 @@
 			},
 			"launchBrowser": true,
 			"launchUrl": "https://localhost:44385/"
+		},
+		"Dev Postgres (Migrate)": {
+			"commandName": "IISExpress",
+			"environmentVariables": {
+				"StartupStrategy": "Migrate",
+				"ASPNETCORE_preventHostingStartup": "True",
+				"ASPNETCORE_ENVIRONMENT": "Development",
+				"UsePostgres": "True"
+			},
+			"launchBrowser": true,
+			"launchUrl": "https://localhost:44385/"
 		}
 	}
 }
