--- a/TASVideos/appsettings.Development.json
+++ b/TASVideos/appsettings.Development.json
@@ -11,5 +11,9 @@
 		"Port": "6667",
 		"Nick": "TASVideosAgentL",
 		"Password": ""
+	},
+	"Jwt": {
+		"SecretKey": "qiYTm561LX9QRuLtZqbQrPdvUOkWebRN",
+		"ExpiresInMinutes":  60 
 	}
 }
