Start a Core library project, move appsetting and CacheService there, more moving to come

--- a/TASVideos.Api/TASVideos.Api.csproj
+++ b/TASVideos.Api/TASVideos.Api.csproj
@@ -27,6 +27,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
+		<ProjectReference Include="..\TASVideos.Core\TASVideos.Core.csproj" />
 		<ProjectReference Include="..\TASVideos.Data\TASVideos.Data.csproj" />
 	</ItemGroup>
 
