--- a/TASVideos/TASVideos.csproj
+++ b/TASVideos/TASVideos.csproj
@@ -66,6 +66,7 @@
 	<ItemGroup>
 		<ProjectReference Include="..\TASVideos.Api\TASVideos.Api.csproj" />
 		<ProjectReference Include="..\TASVideos.Common\TASVideos.Common.csproj" />
+		<ProjectReference Include="..\TASVideos.Core\TASVideos.Core.csproj" />
 		<ProjectReference Include="..\TASVideos.Data\TASVideos.Data.csproj" />
 		<ProjectReference Include="..\TASVideos.ForumEngine\TASVideos.ForumEngine.csproj" />
 		<ProjectReference Include="..\TASVideos.Legacy\TASVideos.Legacy.csproj" />
