--- a/TASVideos.Core/TASVideos.Core.csproj
+++ b/TASVideos.Core/TASVideos.Core.csproj
@@ -13,6 +13,7 @@
 		<ProjectReference Include="..\TASVideos.Common\TASVideos.Common.csproj" />
 		<ProjectReference Include="..\TASVideos.Data\TASVideos.Data.csproj" />
 		<ProjectReference Include="..\TASVideos.ForumEngine\TASVideos.ForumEngine.csproj" />
+		<ProjectReference Include="..\TASVideos.Legacy\TASVideos.Legacy.csproj" />
 		<ProjectReference Include="..\TASVideos.WikiEngine\TASVideos.WikiEngine.csproj" />
 	</ItemGroup>
 </Project>
