--- a/tests/TASVideos.Core.Tests/TASVideos.Core.Tests.csproj
+++ b/tests/TASVideos.Core.Tests/TASVideos.Core.Tests.csproj
@@ -12,11 +12,8 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<FrameworkReference Include="Microsoft.AspNetCore.App" />
-	</ItemGroup>
-
-	<ItemGroup>
 		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.9.4" />
+		<PackageReference Include="Moq" Version="4.16.1" />
 		<PackageReference Include="MSTest.TestAdapter" Version="2.2.3" />
 		<PackageReference Include="MSTest.TestFramework" Version="2.2.3" />
 		<PackageReference Include="StyleCop.Analyzers" Version="1.1.118">
@@ -26,7 +23,8 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<ProjectReference Include="..\..\TASVideos.Common\TASVideos.Common.csproj" />
+		<ProjectReference Include="..\..\TASVideos.Core\TASVideos.Core.csproj" />
+		<ProjectReference Include="..\..\TASVideos.Data\TASVideos.Data.csproj" />
 	</ItemGroup>
 
 </Project>
