--- a/tests/TASVideos.Core.Tests/TASVideos.Core.Tests.csproj
+++ b/tests/TASVideos.Core.Tests/TASVideos.Core.Tests.csproj
@@ -12,6 +12,10 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <EmbeddedResource Include="Services\TestFiles\2Frames.zip" />
+	</ItemGroup>
+
+	<ItemGroup>
 		<PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="5.0.3" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="5.0.3" />
 		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.9.4" />
