Move TestDbContext and TestCache to a common base test library

--- a/tests/TASVideos.Data.Tests/TASVideos.Data.Tests.csproj
+++ b/tests/TASVideos.Data.Tests/TASVideos.Data.Tests.csproj
@@ -17,10 +17,15 @@
 		<PackageReference Include="Moq" Version="4.16.1" />
 		<PackageReference Include="MSTest.TestAdapter" Version="2.2.3" />
 		<PackageReference Include="MSTest.TestFramework" Version="2.2.3" />
+		<PackageReference Include="StyleCop.Analyzers" Version="1.1.118">
+			<PrivateAssets>all</PrivateAssets>
+			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+		</PackageReference>
 	</ItemGroup>
 
 	<ItemGroup>
 		<ProjectReference Include="..\..\TASVideos.Data\TASVideos.Data.csproj" />
+		<ProjectReference Include="..\TASVideos.Tests.Base\TASVideos.Tests.Base.csproj" />
 	</ItemGroup>
 
 </Project>
