--- a/tests/TASVideos.Tests.Base/TASVideos.Tests.Base.csproj
+++ b/tests/TASVideos.Tests.Base/TASVideos.Tests.Base.csproj
@@ -12,16 +12,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-	  <EmbeddedResource Include="Services\TestFiles\2Frames.zip" />
-	</ItemGroup>
-
-	<ItemGroup>
-		<PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="5.0.3" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="5.0.3" />
-		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.9.4" />
-		<PackageReference Include="Moq" Version="4.16.1" />
-		<PackageReference Include="MSTest.TestAdapter" Version="2.2.3" />
-		<PackageReference Include="MSTest.TestFramework" Version="2.2.3" />
 		<PackageReference Include="StyleCop.Analyzers" Version="1.1.118">
 			<PrivateAssets>all</PrivateAssets>
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -29,8 +20,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<ProjectReference Include="..\..\TASVideos.Core\TASVideos.Core.csproj" />
-		<ProjectReference Include="..\TASVideos.Tests.Base\TASVideos.Tests.Base.csproj" />
+	  <ProjectReference Include="..\..\TASVideos.Core\TASVideos.Core.csproj" />
+	  <ProjectReference Include="..\..\TASVideos.Data\TASVideos.Data.csproj" />
 	</ItemGroup>
-
 </Project>
