change local irc settings to move from freenode to libera

--- a/TASVideos/appsettings.Development.json
+++ b/TASVideos/appsettings.Development.json
@@ -5,7 +5,7 @@
 		"PostgresConnection": "Host=127.0.0.1;Port=5432;Database=TASVideos;User Id=postgres;Password=postgres;Include Error Detail=true"
 	},
 	"Irc": {
-		"Server": "irc.freenode.net",
+		"Server": "irc.libera.chat",
 		"Channel": "#tasvideosdevirc",
 		"SecureChannel": "#tasvideosadmindevirc",
 		"Port": "6667",
