--- a/TASVideos/Properties/launchSettings.json
+++ b/TASVideos/Properties/launchSettings.json
@@ -1,95 +1,95 @@
 {
-	"iisSettings": {
-		"windowsAuthentication": false,
-		"anonymousAuthentication": true,
-		"iisExpress": {
-			"applicationUrl": "http://localhost:49653/",
-			"sslPort": 44385
-		}
-	},
-	"profiles": {
-		"Demo": {
-			"commandName": "Project",
-			"environmentVariables": {
-				"ASPNETCORE_ENVIRONMENT": "Demo"
-			}
-		},
-		"Dev MsSql (No recreate)": {
-			"commandName": "IISExpress",
-			"environmentVariables": {
-				"StartupStrategy": "Minimal",
-				"ASPNETCORE_preventHostingStartup": "True",
-				"ASPNETCORE_ENVIRONMENT": "Development",
-				"UsePostgres": "False"
-			},
-			"launchBrowser": true,
-			"launchUrl": "https://localhost:44385/"
-		},
-		"Dev MsSql (Sample Data)": {
-			"commandName": "IISExpress",
-			"environmentVariables": {
-				"StartupStrategy": "Sample",
-				"ASPNETCORE_preventHostingStartup": "True",
-				"ASPNETCORE_ENVIRONMENT": "Development",
-				"UsePostgres": "False"
-			},
-			"launchBrowser": true,
-			"launchUrl": "https://localhost:44385/"
-		},
-		"Dev MsSql (Import)": {
-			"commandName": "IISExpress",
-			"environmentVariables": {
-				"StartupStrategy": "Import",
-				"ASPNETCORE_preventHostingStartup": "True",
-				"ASPNETCORE_ENVIRONMENT": "Development",
-				"UsePostgres": "False"
-			},
-			"launchBrowser": true,
-			"launchUrl": "https://localhost:44385/"
-		},
-		"Dev Postgres (No recreate)": {
-			"commandName": "IISExpress",
-			"environmentVariables": {
-				"StartupStrategy": "Minimal",
-				"ASPNETCORE_preventHostingStartup": "True",
-				"ASPNETCORE_ENVIRONMENT": "Development",
-				"UsePostgres": "True"
-			},
-			"launchBrowser": true,
-			"launchUrl": "https://localhost:44385/"
-		},
-		"Dev Postgres (Sample Data)": {
-			"commandName": "IISExpress",
-			"environmentVariables": {
-				"StartupStrategy": "Sample",
-				"ASPNETCORE_preventHostingStartup": "True",
-				"ASPNETCORE_ENVIRONMENT": "Development",
-				"UsePostgres": "True"
-			},
-			"launchBrowser": true,
-			"launchUrl": "https://localhost:44385/"
-		},
-		"Dev Postgres (Import)": {
-			"commandName": "IISExpress",
-			"environmentVariables": {
-				"StartupStrategy": "Import",
-				"ASPNETCORE_preventHostingStartup": "True",
-				"ASPNETCORE_ENVIRONMENT": "Development",
-				"UsePostgres": "True"
-			},
-			"launchBrowser": true,
-			"launchUrl": "https://localhost:44385/"
-		},
-		"Dev Postgres (Migrate)": {
-			"commandName": "IISExpress",
-			"environmentVariables": {
-				"StartupStrategy": "Migrate",
-				"ASPNETCORE_preventHostingStartup": "True",
-				"ASPNETCORE_ENVIRONMENT": "Development",
-				"UsePostgres": "True"
-			},
-			"launchBrowser": true,
-			"launchUrl": "https://localhost:44385/"
-		}
-	}
+  "iisSettings": {
+    "windowsAuthentication": false,
+    "anonymousAuthentication": true,
+    "iisExpress": {
+      "applicationUrl": "https://localhost:44385/",
+      "sslPort": 44385
+    }
+  },
+  "profiles": {
+    "Demo": {
+      "commandName": "Project",
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Demo"
+      }
+    },
+    "Dev MsSql (No recreate)": {
+      "commandName": "IISExpress",
+      "launchBrowser": true,
+      "launchUrl": "https://localhost:44385/",
+      "environmentVariables": {
+        "UsePostgres": "False",
+        "ASPNETCORE_preventHostingStartup": "True",
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        "StartupStrategy": "Minimal"
+      }
+    },
+    "Dev MsSql (Sample Data)": {
+      "commandName": "IISExpress",
+      "launchBrowser": true,
+      "launchUrl": "https://localhost:44385/",
+      "environmentVariables": {
+        "UsePostgres": "False",
+        "ASPNETCORE_preventHostingStartup": "True",
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        "StartupStrategy": "Sample"
+      }
+    },
+    "Dev MsSql (Import)": {
+      "commandName": "IISExpress",
+      "launchBrowser": true,
+      "launchUrl": "https://localhost:44385/",
+      "environmentVariables": {
+        "UsePostgres": "False",
+        "ASPNETCORE_preventHostingStartup": "True",
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        "StartupStrategy": "Import"
+      }
+    },
+    "Dev Postgres (No recreate)": {
+      "commandName": "IISExpress",
+      "launchBrowser": true,
+      "launchUrl": "https://localhost:44385/",
+      "environmentVariables": {
+        "UsePostgres": "True",
+        "ASPNETCORE_preventHostingStartup": "True",
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        "StartupStrategy": "Minimal"
+      }
+    },
+    "Dev Postgres (Sample Data)": {
+      "commandName": "IISExpress",
+      "launchBrowser": true,
+      "launchUrl": "https://localhost:44385/",
+      "environmentVariables": {
+        "UsePostgres": "True",
+        "ASPNETCORE_preventHostingStartup": "True",
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        "StartupStrategy": "Sample"
+      }
+    },
+    "Dev Postgres (Import)": {
+      "commandName": "IISExpress",
+      "launchBrowser": true,
+      "launchUrl": "https://localhost:44385/",
+      "environmentVariables": {
+        "UsePostgres": "True",
+        "ASPNETCORE_preventHostingStartup": "True",
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        "StartupStrategy": "Import"
+      }
+    },
+    "Dev Postgres (Migrate)": {
+      "commandName": "IISExpress",
+      "launchBrowser": true,
+      "launchUrl": "https://localhost:44385/",
+      "environmentVariables": {
+        "UsePostgres": "True",
+        "ASPNETCORE_preventHostingStartup": "True",
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        "StartupStrategy": "Migrate"
+      }
+    }
+  }
 }
