--- a/tests/TASVideos.Tests.Base/TASVideos.Tests.Base.csproj
+++ b/tests/TASVideos.Tests.Base/TASVideos.Tests.Base.csproj
@@ -13,6 +13,7 @@
 
 	<ItemGroup>
 		<PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="5.0.3" />
+		<PackageReference Include="Moq" Version="4.16.1" />
 		<PackageReference Include="StyleCop.Analyzers" Version="1.1.118">
 			<PrivateAssets>all</PrivateAssets>
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
