--- a/tests/TASVideos.MovieParsers.Tests/TASVideos.MovieParsers.Tests.csproj
+++ b/tests/TASVideos.MovieParsers.Tests/TASVideos.MovieParsers.Tests.csproj
@@ -16,6 +16,7 @@
 		<EmbeddedResource Include="Bk2SampleFiles\2Frames.bk2" />
 		<EmbeddedResource Include="Bk2SampleFiles\Gambatte-CycleCount.bk2" />
 		<EmbeddedResource Include="Bk2SampleFiles\Gambatte-InvalidCycleCount.bk2" />
+		<EmbeddedResource Include="Bk2SampleFiles\Gambatte-NegativeCycleCount.bk2" />
 		<EmbeddedResource Include="Bk2SampleFiles\Gambatte-NoCycleCount.bk2" />
 		<EmbeddedResource Include="Bk2SampleFiles\MissingHeader.bk2" />
 		<EmbeddedResource Include="Bk2SampleFiles\MissingInputLog.bk2" />
