setup serilog, and logging to a file in addition to console, setup serilog request logging instead of middleware

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,4 @@ TASVideos/Properties/serviceDependencies.local.json
 TASVideos.sln.personal.DotSettings
 TASVideos.Data/SampleData/SampleData-MsSql.sql
 TASVideos.Data/SampleData/SampleData-Postgres.sql
+TASVideos/logs/
