--- a/TASVideos/appsettings.Demo.json
+++ b/TASVideos/appsettings.Demo.json
@@ -1,17 +1,30 @@
 {
-	"BaseUrl": "https://tasvideos.mistflux.net",
-	"StartupStrategy": "Minimal",
-	"UsePostgres": true,
-	"CacheSettings": {
-		"CacheType": "Memory",
-		"CacheDurationInSeconds": "7200"
-	},
-	"Logging": {
-		"IncludeScopes": false,
-		"LogLevel": {
-			"Default": "Information",
-			"System": "Information",
-			"Microsoft": "Information"
-		}
-	}
+  "BaseUrl": "https://tasvideos.mistflux.net",
+  "StartupStrategy": "Minimal",
+  "UsePostgres": true,
+  "CacheSettings": {
+    "CacheType": "Memory",
+    "CacheDurationInSeconds": "7200"
+  },
+  "Serilog": {
+    "MinimumLevel": {
+      "Default": "Information",
+      "Override": {
+        "Microsoft": "Warning",
+        "Microsoft.Hosting.Lifetime": "Information",
+        "System": "Warning"
+      }
+    },
+    "WriteTo": [
+      { "Name": "Console" },
+      {
+        "Name": "File",
+        "Args": {
+          "path": "/home/$user/logs/applogs.json",
+          "formatter": "Serilog.Formatting.Json.JsonFormatter, Serilog",
+          "rollingInterval":  "Day"
+        }
+      }
+    ]
+  }
 }
