--- a/TASVideos/appsettings.Development.json
+++ b/TASVideos/appsettings.Development.json
@@ -1,19 +1,35 @@
 ﻿{
-	"BaseUrl": "https://localhost:44385",
-	"ConnectionStrings": {
-		"DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=TASVideos;Trusted_Connection=True;MultipleActiveResultSets=true",
-		"PostgresConnection": "Host=127.0.0.1;Port=5432;Database=TASVideos;User Id=postgres;Password=postgres;Include Error Detail=true"
-	},
-	"Irc": {
-		"Server": "irc.libera.chat",
-		"Channel": "#tasvideosdevirc",
-		"SecureChannel": "#tasvideosadmindevirc",
-		"Port": "6667",
-		"Nick": "TASVideosAgentL",
-		"Password": ""
-	},
-	"Jwt": {
-		"SecretKey": "qiYTm561LX9QRuLtZqbQrPdvUOkWebRN",
-		"ExpiresInMinutes":  60 
-	}
+  "BaseUrl": "https://localhost:44385",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=TASVideos;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "PostgresConnection": "Host=127.0.0.1;Port=5432;Database=TASVideos;User Id=postgres;Password=postgres;Include Error Detail=true"
+  },
+  "Irc": {
+    "Server": "irc.libera.chat",
+    "Channel": "#tasvideosdevirc",
+    "SecureChannel": "#tasvideosadmindevirc",
+    "Port": "6667",
+    "Nick": "TASVideosAgentL",
+    "Password": ""
+  },
+  "Jwt": {
+    "SecretKey": "qiYTm561LX9QRuLtZqbQrPdvUOkWebRN",
+    "ExpiresInMinutes": 60
+  },
+  "Serilog": {
+    "MinimumLevel": {
+      "Default": "Information"
+    },
+    "WriteTo": [
+      { "Name": "Console" },
+      {
+        "Name": "File",
+        "Args": {
+          "path": "logs/applogs.json",
+          "formatter": "Serilog.Formatting.Json.JsonFormatter, Serilog",
+          "rollingInterval": "Day"
+        }
+      }
+    ]
+  }
 }
