--- a/TASVideos/appsettings.Demo.json
+++ b/TASVideos/appsettings.Demo.json
@@ -20,7 +20,7 @@
       {
         "Name": "File",
         "Args": {
-          "path": "/home/$user/logs/applogs.json",
+          "path": "/home/tasvideos/logs/applogs.json",
           "formatter": "Serilog.Formatting.Json.JsonFormatter, Serilog",
           "rollingInterval":  "Day"
         }
