--- a/TASVideos/appsettings.Demo.json
+++ b/TASVideos/appsettings.Demo.json
@@ -22,9 +22,13 @@
         "Args": {
           "path": "/home/tasvideos/logs/applogs.json",
           "formatter": "Serilog.Formatting.Json.JsonFormatter, Serilog",
-          "rollingInterval":  "Day"
+          "rollingInterval": "Day"
         }
       }
     ]
+  },
+  "webOptimizer": {
+    "enableCaching": false,
+    "enableTagHelperBundling": false
   }
 }
