log information on demo server, for now

--- a/TASVideos/appsettings.Demo.json
+++ b/TASVideos/appsettings.Demo.json
@@ -10,9 +10,9 @@
     "MinimumLevel": {
       "Default": "Information",
       "Override": {
-        "Microsoft": "Warning",
+        "Microsoft": "Information",
         "Microsoft.Hosting.Lifetime": "Information",
-        "System": "Warning"
+        "System": "Information"
       }
     },
     "WriteTo": [
