--- a/TASVideos.Core/TASVideos.Core.csproj
+++ b/TASVideos.Core/TASVideos.Core.csproj
@@ -8,6 +8,7 @@
 		<PackageReference Include="IPAddressRange" Version="4.2.0" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.3" />
 		<PackageReference Include="SendGrid" Version="9.23.0" />
+		<PackageReference Include="StackExchange.Redis" Version="2.2.50" />
 	</ItemGroup>
 	<ItemGroup>
 		<ProjectReference Include="..\TASVideos.Common\TASVideos.Common.csproj" />
