set up demo environment for redis cache

--- a/TASVideos/appsettings.Demo.json
+++ b/TASVideos/appsettings.Demo.json
@@ -3,8 +3,9 @@
   "StartupStrategy": "Minimal",
   "UsePostgres": true,
   "CacheSettings": {
-    "CacheType": "Memory",
-    "CacheDurationInSeconds": "7200"
+    "CacheType": "Redis",
+    "CacheDurationInSeconds": "3600",
+    "ConnectionString": "localhost"
   },
   "Serilog": {
     "MinimumLevel": {
