--- a/tests/TASVideos.MovieParsers.Tests/TASVideos.MovieParsers.Tests.csproj
+++ b/tests/TASVideos.MovieParsers.Tests/TASVideos.MovieParsers.Tests.csproj
@@ -8,6 +8,10 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+	  <None Remove="FbmSampleFiles\savestate.fbm" />
+	</ItemGroup>
+
+	<ItemGroup>
 		<AdditionalFiles Include="$(ProjectDir)../../.stylecop.json" />
 	</ItemGroup>
 
@@ -80,6 +84,7 @@
 		<EmbeddedResource Include="DtmSampleFiles\wrongheader.dtm" />
 		<EmbeddedResource Include="FbmSampleFiles\basictest.fbm" />
 		<EmbeddedResource Include="FbmSampleFiles\missinginput.fbm" />
+		<EmbeddedResource Include="FbmSampleFiles\savestate.fbm" />
 		<EmbeddedResource Include="FbmSampleFiles\wrongmarker.fbm" />
 		<EmbeddedResource Include="Fm2SampleFiles\fds.fm2" />
 		<EmbeddedResource Include="Fm2SampleFiles\negativererecords.fm2" />
