add default redis connection string to appsettings (won't be used unless type is switched, but it makes switching easier)

--- a/TASVideos/appsettings.json
+++ b/TASVideos/appsettings.json
@@ -6,6 +6,7 @@
   "UsePostgres": true,
   "CacheSettings": {
     "CacheType": "Memory",
-    "CacheDurationInSeconds": "3600"
+    "CacheDurationInSeconds": "3600",
+    "ConnectionString": "localhost"
   }
 }
