update baseUrl for demo

--- a/TASVideos/appsettings.Demo.json
+++ b/TASVideos/appsettings.Demo.json
@@ -1,5 +1,5 @@
 {
-  "BaseUrl": "https://tasvideos.mistflux.net",
+  "BaseUrl": "https://demo.tasvideos.org",
   "StartupStrategy": "Minimal",
   "UsePostgres": true,
   "CacheSettings": {
