demo logging - only log warning level or higher, for now

--- a/TASVideos/appsettings.Demo.json
+++ b/TASVideos/appsettings.Demo.json
@@ -9,11 +9,11 @@
   },
   "Serilog": {
     "MinimumLevel": {
-      "Default": "Information",
+      "Default": "Warning",
       "Override": {
-        "Microsoft": "Information",
-        "Microsoft.Hosting.Lifetime": "Information",
-        "System": "Information"
+        "Microsoft": "Warning",
+        "Microsoft.Hosting.Lifetime": "Warning",
+        "System": "Warning"
       }
     },
     "WriteTo": [
