rename tier to publication class

--- a/TASVideos.Data/TASVideos.Data.csproj
+++ b/TASVideos.Data/TASVideos.Data.csproj
@@ -7,6 +7,11 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+	  <None Remove="SampleData\SampleData-MsSql.sql" />
+	  <None Remove="SampleData\SampleData-Postgres.sql" />
+	</ItemGroup>
+
+	<ItemGroup>
 		<EmbeddedResource Include="SampleData\SampleData-Postgres.zip" />
 		<EmbeddedResource Include="SampleData\SampleData-MsSql.zip" />
 	</ItemGroup>
