--- a/TASVideos/TASVideos.csproj
+++ b/TASVideos/TASVideos.csproj
@@ -75,9 +75,9 @@
 		<ProjectReference Include="..\TASVideos.WikiEngine\TASVideos.WikiEngine.csproj" />
 	</ItemGroup>
 
-	<Target Name="PreBuild" BeforeTargets="PreBuildEvent">
+	<!--<Target Name="PreBuild" BeforeTargets="PreBuildEvent">
 		<Exec Command="dotnet ../GitVersion.CommandLine/gitversion.dll /updateassemblyinfo .gitversion.cs /ensureassemblyinfo" />
-	</Target>
+	</Target>-->
 
 	<ItemGroup>
 		<Content Update="Pages\Forum\Topics\Merge.cshtml">
