Bk2 parsing - support DS

--- a/tests/TASVideos.MovieParsers.Tests/TASVideos.MovieParsers.Tests.csproj
+++ b/tests/TASVideos.MovieParsers.Tests/TASVideos.MovieParsers.Tests.csproj
@@ -8,6 +8,7 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+	  <None Remove="Bk2SampleFiles\System-Nds.bk2" />
 	  <None Remove="FbmSampleFiles\savestate.fbm" />
 	</ItemGroup>
 
@@ -51,6 +52,7 @@
 		<EmbeddedResource Include="Bk2SampleFiles\System-Intellivision.bk2" />
 		<EmbeddedResource Include="Bk2SampleFiles\System-Lynx.bk2" />
 		<EmbeddedResource Include="Bk2SampleFiles\System-N64.bk2" />
+		<EmbeddedResource Include="Bk2SampleFiles\System-Nds.bk2" />
 		<EmbeddedResource Include="Bk2SampleFiles\System-Nes.bk2" />
 		<EmbeddedResource Include="Bk2SampleFiles\System-Ngb.bk2" />
 		<EmbeddedResource Include="Bk2SampleFiles\System-O2.bk2" />
