--- a/serverscripts/tasvideos-service.cfg
+++ b/serverscripts/tasvideos-service.cfg
@@ -15,7 +15,6 @@ DNXRUNTIME=/usr/bin/dotnet
 APPROOT=/home/tasvideos/tasvideos/TASVideos
 
 PIDFILE=$APPROOT/tasvideos.pid
-LOGFILE=$APPROOT/tasvideos.log
 
 # fix issue with DNX exception in case of two env vars with the same name but different case
 TMP_SAVE_runlevel_VAR=$runlevel
@@ -32,7 +31,7 @@ start() {
   #$DNXRUNTIME restore
 
   # dotnet run --project "/home/tasvideos/tasvideos/TASVideos" --urls "http://127.0.0.1:5000/" --environment "Staging" --StartupStrategy Minimal
-  su -c "start-stop-daemon -SbmCv -x /usr/bin/nohup -p \"$PIDFILE\" -d \"$APPROOT\" -- \"$DNXRUNTIME\" run --project $APPROOT --urls \"http://127.0.0.1:5000/\" --environment \"Staging\" --StartupStrategy Minimal &> \"$LOGFILE\"" $WWW_USER
+  su -c "start-stop-daemon -SbmCv -x /usr/bin/nohup -p \"$PIDFILE\" -d \"$APPROOT\" -- \"$DNXRUNTIME\" run --project $APPROOT --urls \"http://127.0.0.1:5000/\" --environment \"Staging\" --StartupStrategy Minimal" $WWW_USER
   chown root:root $PIDFILE
   echo 'Service started' >&2
 }
