--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,4 @@ TASVideos.sln.personal.DotSettings
 TASVideos.Data/SampleData/SampleData-MsSql.sql
 TASVideos.Data/SampleData/SampleData-Postgres.sql
 TASVideos/logs/
+TASVideos/nohup.out
