staging settings - log information

--- a/TASVideos/appsettings.Staging.json
+++ b/TASVideos/appsettings.Staging.json
@@ -9,11 +9,11 @@
   },
   "Serilog": {
     "MinimumLevel": {
-      "Default": "Warning",
+      "Default": "Information",
       "Override": {
-        "Microsoft": "Warning",
-        "Microsoft.Hosting.Lifetime": "Warning",
-        "System": "Warning"
+        "Microsoft": "Information",
+        "Microsoft.Hosting.Lifetime": "Information",
+        "System": "Information"
       }
     },
     "WriteTo": [
