fix tasvideos-service.cfg pid path

--- a/serverscripts/tasvideos-service.cfg
+++ b/serverscripts/tasvideos-service.cfg
@@ -14,7 +14,7 @@ WWW_USER=tasvideos
 DNXRUNTIME=/usr/bin/dotnet
 APPROOT=/home/tasvideos/tasvideos/TASVideos
 
-PIDFILE=$APPROOT/tasvideos.pid
+PIDFILE=/home/tasvideos.pid
 
 # fix issue with DNX exception in case of two env vars with the same name but different case
 TMP_SAVE_runlevel_VAR=$runlevel
