--- a/TASVideos/Properties/launchSettings.json
+++ b/TASVideos/Properties/launchSettings.json
@@ -14,6 +14,12 @@
         "ASPNETCORE_ENVIRONMENT": "Demo"
       }
     },
+    "Staging": {
+      "commandName": "Project",
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Staging"
+      }
+    },
     "Dev MsSql (No recreate)": {
       "commandName": "IISExpress",
       "launchBrowser": true,
