--- a/serverscripts/tasvideos-service.cfg
+++ b/serverscripts/tasvideos-service.cfg
@@ -22,7 +22,7 @@ unset runlevel
 
 start() {
   if [ -f $PIDFILE ] && kill -0 $(cat $PIDFILE); then
-    echo 'Service already running' >&2
+    echo 'Service already running or was not stopped correctly.' >&2
     return 1
   fi
  
@@ -31,7 +31,7 @@ start() {
   #$DNXRUNTIME restore
 
   # dotnet run --project "/home/tasvideos/tasvideos/TASVideos" --urls "http://127.0.0.1:5000/" --environment "Staging" --StartupStrategy Minimal
-  su -c "start-stop-daemon -SbmCv -x /usr/bin/nohup -p \"$PIDFILE\" -d \"$APPROOT\" -- \"$DNXRUNTIME\" run --project $APPROOT --urls \"http://127.0.0.1:5000/\" --environment \"Staging\" --StartupStrategy Minimal" $WWW_USER
+  su -c "start-stop-daemon -SbmCv -x /usr/bin/nohup -p \"$PIDFILE\" -d \"$APPROOT\" -- \"$DNXRUNTIME\" run --project $APPROOT --urls \"http://127.0.0.1:5000/\" --environment \"Staging\" --StartupStrategy Minimal -c Release --no-build --launch-profile \"Staging\"" $WWW_USER
   chown root:root $PIDFILE
   echo 'Service started' >&2
 }
