staging - override logging for microsoft to warning

--- a/TASVideos/appsettings.Staging.json
+++ b/TASVideos/appsettings.Staging.json
@@ -11,7 +11,7 @@
     "MinimumLevel": {
       "Default": "Information",
       "Override": {
-        "Microsoft": "Information",
+        "Microsoft": "Warning",
         "Microsoft.Hosting.Lifetime": "Information",
         "System": "Information"
       }
