--- a/TASVideos.Data/TASVideos.Data.csproj
+++ b/TASVideos.Data/TASVideos.Data.csproj
@@ -7,13 +7,11 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-	  <None Remove="SampleData\SampleData-MsSql.sql" />
 	  <None Remove="SampleData\SampleData-Postgres.sql" />
 	</ItemGroup>
 
 	<ItemGroup>
 		<EmbeddedResource Include="SampleData\SampleData-Postgres.zip" />
-		<EmbeddedResource Include="SampleData\SampleData-MsSql.zip" />
 	</ItemGroup>
 
 	<ItemGroup>
@@ -27,7 +25,7 @@
 		  <PrivateAssets>all</PrivateAssets>
 		  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
-		<PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.3" />
+		<PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
 		<PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="5.0.2" />
 		<PackageReference Include="StyleCop.Analyzers" Version="1.1.118">
 		  <PrivateAssets>all</PrivateAssets>
