use a different connection string for creating sample data to avoid nuking an existing database

--- a/TASVideos/appsettings.Development.json
+++ b/TASVideos/appsettings.Development.json
@@ -1,7 +1,8 @@
 ﻿{
   "BaseUrl": "https://localhost:44385",
   "ConnectionStrings": {
-    "PostgresConnection": "Host=127.0.0.1;Port=5432;Database=TASVideos;User Id=postgres;Password=postgres;Include Error Detail=true"
+    "PostgresConnection": "Host=127.0.0.1;Port=5432;Database=TASVideos;User Id=postgres;Password=postgres;Include Error Detail=true",
+    "PostgresSampleDataConnection": "Host=127.0.0.1;Port=5432;Database=TASVideosSampleData;User Id=postgres;Password=postgres;Include Error Detail=true"
   },
   "Irc": {
     "Server": "irc.libera.chat",
