--- a/TASVideos/TASVideos.csproj
+++ b/TASVideos/TASVideos.csproj
@@ -90,6 +90,9 @@
 	</Target>-->
 
 	<ItemGroup>
+		<Content Update="Pages\Forum\Posts\Latest.cshtml">
+		  <Pack>$(IncludeRazorContentInPack)</Pack>
+		</Content>
 		<Content Update="Pages\Forum\Topics\Merge.cshtml">
 			<Pack>$(IncludeRazorContentInPack)</Pack>
 		</Content>
