--- a/TASVideos/appsettings.Production.json
+++ b/TASVideos/appsettings.Production.json
@@ -8,13 +8,8 @@
   },
   "Serilog": {
     "MinimumLevel": {
-      "Default": "Information",
-      "Override": {
-        "Microsoft": "Warning",
-        "Microsoft.Hosting.Lifetime": "Information",
-        "System": "Information"
-      }
-    },
+      "Default": "Warning"
+		},
     "WriteTo": [
       { "Name": "Console" },
       {
