move MinimumHoursBeforeJudgment to appsettings, and make it 0 in non-prod environments

--- a/TASVideos/appsettings.Production.json
+++ b/TASVideos/appsettings.Production.json
@@ -1,5 +1,6 @@
 {
-  "BaseUrl": "https://tasvideos.org",
+  "BaseUrl": "https://tasvideos.org", 
+  "MinimumHoursBeforeJudgment": 72,
   "StartupStrategy": "Minimal",
   "CacheSettings": {
     "CacheType": "Redis",
