show previous posts when creating a new post

--- a/TASVideos/TASVideos.csproj
+++ b/TASVideos/TASVideos.csproj
@@ -89,6 +89,9 @@
 		<Content Update="Pages\Forum\Posts\Latest.cshtml">
 		  <Pack>$(IncludeRazorContentInPack)</Pack>
 		</Content>
+    <Content Update="Pages\Forum\Posts\_TopicMiniPost.cshtml">
+      <Pack>$(IncludeRazorContentInPack)</Pack>
+    </Content>
 		<Content Update="Pages\Forum\Topics\Merge.cshtml">
 			<Pack>$(IncludeRazorContentInPack)</Pack>
 		</Content>
