Try to shut up EF warnings

--- a/TASVideos/appsettings.Production.json
+++ b/TASVideos/appsettings.Production.json
@@ -9,7 +9,10 @@
   },
   "Serilog": {
     "MinimumLevel": {
-      "Default": "Warning"
+      "Default": "Warning",
+      "Override": {
+        "Microsoft.EntityFrameworkCore":  "Error" 
+      } 
 		},
     "WriteTo": [
       { "Name": "Console" },
