don't log everytime a user fails to log in

--- a/TASVideos/appsettings.Production.json
+++ b/TASVideos/appsettings.Production.json
@@ -11,8 +11,9 @@
     "MinimumLevel": {
       "Default": "Warning",
       "Override": {
-        "Microsoft.EntityFrameworkCore":  "Error" 
-      } 
+        "Microsoft.EntityFrameworkCore": "Error",
+        "Microsoft.AspNetCore.Identity":  "Error"
+      }
 		},
     "WriteTo": [
       { "Name": "Console" },
