--- a/TASVideos/appsettings.Production.json
+++ b/TASVideos/appsettings.Production.json
@@ -3,7 +3,7 @@
   "MinimumHoursBeforeJudgment": 72,
   "StartupStrategy": "Minimal",
   "CacheSettings": {
-    "CacheType": "Redis",
+    "CacheType": "Memory",
     "CacheDurationInSeconds": "3600",
     "ConnectionString": "localhost"
   },
