--- a/tests/TASVideos.Core.Tests/TASVideos.Core.Tests.csproj
+++ b/tests/TASVideos.Core.Tests/TASVideos.Core.Tests.csproj
@@ -4,6 +4,7 @@
 		<TargetFramework>net6.0</TargetFramework>
 		<IsPackable>false</IsPackable>
 		<CodeAnalysisRuleSet>$(ProjectDir)../../Common.ruleset</CodeAnalysisRuleSet>
+		<ImplicitUsings>enable</ImplicitUsings>
 	</PropertyGroup>
 
 	<ItemGroup>
