--- a/tests/TASVideos.Test/TASVideos.RazorPages.Tests.csproj
+++ b/tests/TASVideos.Test/TASVideos.RazorPages.Tests.csproj
@@ -3,6 +3,7 @@
 		<TargetFramework>net6.0</TargetFramework>
 		<IsPackable>false</IsPackable>
 		<CodeAnalysisRuleSet>$(ProjectDir)../../Common.ruleset</CodeAnalysisRuleSet>
+		<ImplicitUsings>enable</ImplicitUsings>
 	</PropertyGroup>
 
 	<ItemGroup>
