--- a/tests/TASVideos.WikiEngine.Snapshots/TASVideos.WikiEngine.Snapshots.csproj
+++ b/tests/TASVideos.WikiEngine.Snapshots/TASVideos.WikiEngine.Snapshots.csproj
@@ -12,5 +12,6 @@
 	<PropertyGroup>
 		<OutputType>Exe</OutputType>
 		<TargetFramework>net6.0</TargetFramework>
+		<ImplicitUsings>enable</ImplicitUsings>
 	</PropertyGroup>
 </Project>
