--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -20,7 +20,7 @@ jobs:
     - name: Set up .NET Core 6.0.x
       uses: actions/setup-dotnet@v1
       with:
-        dotnet-version: 6.0.0
+        dotnet-version: 6.0.x
     - name: Install dependencies
       run: dotnet restore
     - name: Unshallow Commits
