Bsnes sgb fix (#1295)
* Revert "Revert "parse SGB movie files to use the GB label (#1125)" (#1162)"

This reverts commit 06d0050bab96629e70edca2654c6e9c2c1680a50.

* fix bsnes sgb parsing alone

--- a/tests/TASVideos.MovieParsers.Tests/TASVideos.MovieParsers.Tests.csproj
+++ b/tests/TASVideos.MovieParsers.Tests/TASVideos.MovieParsers.Tests.csproj
@@ -72,6 +72,7 @@
 		<EmbeddedResource Include="Bk2SampleFiles\System-SegaCd.bk2" />
 		<EmbeddedResource Include="Bk2SampleFiles\System-Sg.bk2" />
 		<EmbeddedResource Include="Bk2SampleFiles\System-Sgb.bk2" />
+		<EmbeddedResource Include="Bk2SampleFiles\System-Sgb-Snes.bk2" />
 		<EmbeddedResource Include="Bk2SampleFiles\System-Sgx.bk2" />
 		<EmbeddedResource Include="Bk2SampleFiles\System-Sms.bk2" />
 		<EmbeddedResource Include="Bk2SampleFiles\System-Snes.bk2" />
